--- a/3.2+HTTP+Requests/3.2 HTTP Requests/package.json
+++ b/3.2+HTTP+Requests/3.2 HTTP Requests/package.json
@@ -1,7 +1,6 @@
 {
   "name": "3.2-http-requests",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,5 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.1.9"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
